[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/Acme-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://utils/AppearingText.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/victory_screen.gd" type="Script" id=3]

[sub_resource type="Theme" id=1]

[sub_resource type="DynamicFont" id=2]
size = 128
outline_size = 4
use_filter = true
font_data = ExtResource( 1 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color( 0.635294, 0.8, 0.854902, 1 )
polygon = PoolVector2Array( -36, -28, -34, 636, 1079, 633, 1074, -36 )

[node name="Congratulations" type="CenterContainer" parent="."]
margin_left = 39.0
margin_top = -39.0
margin_right = 979.0
margin_bottom = 391.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource( 1 )

[node name="Label" type="Label" parent="Congratulations"]
margin_left = 43.0
margin_top = 50.0
margin_right = 897.0
margin_bottom = 379.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2
custom_colors/font_color = Color( 0.129412, 0.670588, 0.109804, 1 )
custom_colors/font_outline_modulate = Color( 0.00784314, 0.00784314, 0.00784314, 1 )
custom_fonts/font = SubResource( 2 )
text = "BIEN HECHO
¡¡LO LOGRASTE!!"
align = 1
valign = 1

[node name="VictoryText" type="CenterContainer" parent="."]
margin_left = 8.0
margin_top = 283.0
margin_right = 1301.0
margin_bottom = 713.0
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.78, 0.78 )
theme = SubResource( 1 )

[node name="Label" type="Label" parent="VictoryText"]
margin_left = 646.0
margin_top = 133.0
margin_right = 646.0
margin_bottom = 296.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2
custom_colors/font_color = Color( 0.862745, 0.866667, 0.482353, 1 )
custom_colors/font_outline_modulate = Color( 0.00784314, 0.00784314, 0.00784314, 1 )
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1

[node name="AppearingText" parent="." instance=ExtResource( 2 )]

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
